# markdeck

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION-OLD.md  DOCUMENTATION.md  Dockerfile  Dockerfile.pandoc  LICENSE  Makefile  README.md  REWRITE_IN_RUST.md  TODOS.md  build  build-all  build-image  build.rs  config  develop-md2deck  docker-compose.yaml  install-markdeck.macos.sh  install-markdeck.x86_64-pc-windows-gnu  install-markdeck.x86_64-pc-windows-gnu.md  markdeck  render-html  render-html-generic  render-html-live  render-pdf  run  scaffold  slides.md  update-rs
attic/: build-all  includecode-test.md  install-markdeck.x86_64-apple-darwin.sh  install-markdeck.x86_64-pc-windows-gnu.md  update-rs
doc-src/: develop  develop.yaml  sync
doc-src/asciiart/: docker-compose.yaml  include-before-body  slides.md
doc-src/markdown-basics/: docker-compose.yaml  slides.md  start
doc-src/slide-layout/: docker-compose.yaml  intro.md  slides.md
docker/: Dockerfile.docroot  Dockerfile.markdeck
docs/: explain.html  index.html  slides.combined.md  slides.combined.md.html  sync-showcase
docs/assets/css/: slides.css
docs/css/: custom.css  custom2.css
docs/docs/asciiart/: index.html  slides.combined.md.txt
docs/docs/markdown-basics/: index.html  slides.combined.md.txt
docs/docs/slide-layout/: index.html  slides.combined.md.txt
docs/showcase/: index.html  markdeck-example.html  slides.combined.md.txt  slides.md
docs/showcase.impress/: explain.html  index.html  slides.combined.md.txt
example/: config  develop  docker-compose.yaml  include-after-body  markdeck  render-asciiart-filter.config  render-example  render-html-example  slides.md  start
example/assets/: test.json  test.py
example/assets/css/: _common.scss  slides.css  slides.impress.scss  slides.scss
example/minimal/: Makefile  docker-compose.yaml  markdeck  slides.md  stop  update-markdeck
markdeck/: loop  template-impressjs.html  template-revealjs.html
markdeck/lib/: impressjs-shortcut-filter.lua
md2deck/: loop  template-revealjs.html
md2deck/lib/: reveal-shortcut-filter.lua  revealjs-shortcut-filter.lua
playground/: develop  docker-compose.yaml  slides.md
src/: .env  Dockerfile  Dockerfile.a2sketch  Dockerfile.decktape  Dockerfile.helper  Dockerfile.helper-old  Dockerfile.liveserver  Dockerfile.pandoc  Dockerfile.standalone  Makefile  a2sketch.webserver  develop  develop-markdeck  develop.yaml  develop.yaml.source  docker-compose.yaml  docker-compose.yaml.source  live_server.rs  main.rs  markdown_pp.rs  sass.rs  start-development
src/markdeck/: Makefile  default.config  defaults.yaml  embed  explain  explain.html  loop  loop.decktape  loop.standalone  metadata.template  note.md  template-impress.html  template-reveal.html  template-revealjs.html  versions  wait-for-changes
src/scaffold/: .gitignore  slides.md
tools/: bump-version  convert-buddy  desaturate  mov2gif
(+107 files in other folders)
