[package]
name = "markdeck"
version = "0.60.0"
authors = ["Arne Hilmann <arne@hilmann.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
grass = "0"
anyhow = "1"

[dependencies]
rust-embed = { version = "5", features = ["compression"] }
grass = "0"
rusync = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0"

actix = "0.10"
actix-codec = "0"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0"
awc = "2"
env_logger = "0"
futures = "0"
bytes = "0"
actix-service = "1"

notify = "4"
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
uuid = { version = "0", features = ["serde", "v4"] }
log = "0"
walkdir = "2"
regex = "1"

clap = "2"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
eyre = "0.6.5"
