[package]
name = "markdeck"
version = "0.60.0"
authors = ["Arne Hilmann <arne@hilmann.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[build-dependencies]
grass = "0"
anyhow = "1"

[dependencies]
rust-embed = { version = "6", features = ["compression"] }
grass = "0"
rusync = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0"

actix = "0"
actix-codec = "0"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0"
awc = "3"
env_logger = "0"
futures = "0"
bytes = "1"
actix-service = "2"

notify = "4"
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
uuid = { version = "1", features = ["serde", "v4"] }
log = "0"
walkdir = "2"
regex = "1"

clap = "2"
color-eyre = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
eyre = "0"

minidom = "0"